# backend/api/api.go
@@ -18,8 +18,9 @@ func NewHandler(db map[string]string) http.Handler {
 	r.Use(middleware.RequestID)
 	r.Use(middleware.Logger)
 
-	r.Get("/api/healthy", handlerHealthy())
-	r.Get("/swagger/*", httpSwagger.WrapHandler)
+	r.Get("/api/healthy", healthyHandler())
+	r.Get("/api/swagger/*", httpSwagger.WrapHandler)
+	r.Post("/api/login", loginHandler())
 
 	return r
 }
@@ -42,15 +43,42 @@ func sendJSON(w http.ResponseWriter, resp models.Response, status int) {
 // getHealthy
 // @Summary Check healthy
 // @Description Check if application if healthy
-// @Tags handlerHealthy
+// @Tags healthyHandler
 // @Accept json
 // @Produce json
-// @Success 200 {object} models.Healthy
+// @Success 200 {object} models.HealthyResponse
 // @Router /api/healthy [GET]
-func handlerHealthy() http.HandlerFunc {
+func healthyHandler() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
-		var response models.Healthy
+		var response models.HealthyResponse
 		response.IsHealthy = true
 		sendJSON(w, models.Response{Data: response}, http.StatusOK)
+	}
+}
+
+// postLogin
+// @Summary Get Access token
+// @Description Get your access token
+// @Tags loginHandler
+// @Accept json
+// @Produce json
+// @Success 200 {object} models.AuthResponse
+// @Router /api/login [POST]
+func loginHandler() http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		var u models.User
+		json.NewDecoder(r.Body).Decode(&u)
+
+		if u.Username == "Chek" && u.Password == "123456" {
+			accessToken, err := CreateToken(u.Username)
+			if err != nil {
+				sendJSON(w, models.Response{Data: models.Response{Error: err.Error()}}, http.StatusInternalServerError)
+			}
+			sendJSON(w, models.Response{Data: models.AuthResponse{AccessToken: accessToken}}, http.StatusOK)
+			return
+		} else {
+			sendJSON(w, models.Response{Data: models.Response{Error: "Invalid credentials"}}, http.StatusUnauthorized)
+
+		}
 	}
 }
