# backend/models/auth_response.go
@@ -1,0 +1,5 @@
+package models
+
+type AuthResponse struct {
+	AccessToken string `json:"access_token,omitempty"`
+}
